# AI-training-database

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_data.txt  test_full_pipeline.py
data_factory/: __init__.py  bot.py  config.py  models.py  requirements.txt
data_factory/cli/: __init__.py  main.py
data_factory/dashboard/: app.py
data_factory/integrations/: __init__.py  decodo_api.py  web_scraper.py
data_factory/loaders/: __init__.py  base.py  file_loader.py  pdf_loader.py  url_loader.py
data_factory/processors/: __init__.py  chunker.py  cleaner.py  pipeline.py
data_factory/quality/: __init__.py  bias.py  coherence.py  diversity.py  pipeline.py  toxicity.py
data_factory/tasks/: __init__.py  classification.py  manager.py  qa.py  summarization.py  templates.py
data_factory/tests/: test_models.py  test_processors.py  test_quality.py
data_factory/utils/: __init__.py  cost_tracker.py  llm_client.py  logger.py  metadata.py
